# apexsigma-devenviro-hymem

./: .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  SECURITY.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  requirements_ai.txt  validation_report.json
.claude/: settings.local.json
.github/workflows/: ci.yml  linear-automation.yml
code/: autonomous_demo.py  autonomous_guide_creator.py  check_linear.py  clean_logs.py  cleanup_project.py  cognitive_workflow.py  comprehensive_system_test.py  deploy_hybrid_system.py  linear_automation.py  linear_project_status.py  mem0_service.py  memory_bridge.py  monitoring.py  project_status.py  simple_memory_service.py  simple_workflow.py  simplified_deployment_test.py  simplified_test_report.json  system_status.py  task_helper.py  test_linear_wsl2.py  test_mem0.py  test_memory_bridge.py  test_wsl2_setup.py  update_linear_hybrid_progress.py  workflow_engine.py
code/ai_training/: custom_ai_trainer.py  local_ai_engine.py
code/memory/: hybrid_memory_system.py
code/test_memory/: memory.db
docs/: 12_Post Run actions_checkout@v4.txt  13_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Set up Python.txt  4_Install documentation dependencies.txt  5_Build documentation.txt  6_Deploy to GitHub Pages.txt  api.rst  conf.py  day2-completion-report.md  day3-completion-report.md  day3_setup_guide.md  day4_autonomous_guide.md  deployment.rst  hybrid-cloud-local-strategy.md  hybrid-system-implementation-summary.md  independence-strategy.md  index.rst  installation.rst  mem0-comparison-analysis.md  memory-architecture-design.md  quickstart.rst  security.rst  testing.rst
tests/: conftest.py  test_mem0_integration.py
